--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<p class="contact">Мой контактный телефон</p>
 		<span>+380508371979</span>
 		<p class="contact">Мой профиль в контакте</p>
-		<a href="http://vk.com/dasfl">vk.com</a>
+		<a href="http://vk.com/dasfl" target="_blank">vk.com</a>
 		<hr>
 		<p class="feedback">Мой фидбек:</p>
 		<p>Делать, делать и еще раз делать!</p>
